# agent-grid

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app-snapshot.txt  commitlint.config.js  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md  layout-refactor.md  settings.json  v1-roadmap.md
.claude/hooks/: validate-dockview.sh
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  next-ui-ux.md  roadmap.md  v1-release-checklist.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: app.tsx
src/components/: app-bar.tsx  breadcrumb-bar.tsx  error-boundary.tsx  shortcut-bar.tsx  sidebar.tsx  tab-strip.tsx  titlebar.tsx
src/features/command-palette/: command-palette.tsx
src/features/dashboard/: dashboard-grid.tsx
src/features/layouts/: builtin-presets.ts  engine.test.ts  engine.ts  index.ts  layout-control.tsx  layout-picker.tsx  preset-store.test.ts  preset-store.ts  tile-tree.tsx  (+2 more)
src/lib/: cwd.test.ts  cwd.ts  dockview-api.ts  grid-presets.ts  layout-storage.test.ts  layout-storage.ts  profiles.test.ts  profiles.ts  tauri-shim.ts  terminal-registry.test.ts  terminal-registry.ts  use-global-shortcuts.test.ts  use-global-shortcuts.ts  worktree.ts
src/store/: pane-status-store.test.ts  pane-status-store.ts  workspace-store.test.ts  workspace-store.ts
src/types/: index.ts
(+13 files in other folders)
