[package]
name = "agent-grid"
version = "0.1.0"
description = "A fast, cross-platform desktop app for parallel AI coding terminals"
authors = ["Agent Grid Contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "agent_grid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-pty = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.0"
