[package]
name = "agent-grid"
version = "0.2.0-alpha.2"
description = "A fast, cross-platform desktop app for parallel AI coding terminals"
authors = ["Agent Grid Contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "agent_grid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-pty = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.0"
tokio = { version = "1", features = ["rt-multi-thread"] }

# Desktop-only: in-app auto-updates from GitHub Releases
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
